--- a/Recap.ipynb
+++ b/Recap.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "tags": [
      "challengify"
@@ -23,7 +23,7 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "country = 'France'"
    ]
   },
   {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "tags": [
      "challengify"
@@ -43,7 +43,7 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "animal = 'cat'"
    ]
   },
   {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "tags": [
      "challengify"
@@ -63,7 +63,7 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "animal_count = 6"
    ]
   },
   {
@@ -78,15 +78,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "tags": [
      "challengify"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I just ordered 6 cats from France\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "print(f\"I just ordered {animal_count} {animal}s from {country}\")"
    ]
   },
   {
@@ -102,9 +110,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variables are now defined!\n"
+     ]
+    }
+   ],
    "source": [
     "pi = 3.14\n",
     "food = 'pizza'\n",
@@ -123,20 +139,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pi_type = ?\n",
-    "food_type = ?\n",
-    "colors_type = ?"
+    "pi_type = float\n",
+    "food_type = str\n",
+    "colors_type = list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(pi) == pi_type \\\n",
     "and type(food) == food_type \\\n",
@@ -152,9 +179,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variables are now defined!\n"
+     ]
+    }
+   ],
    "source": [
     "user_profile = {'email': 'buffy@gmail.com', 'age': 19, 'password': 'hunter2', 'profession': 'Vampire Slayer' }\n",
     "shapes = ('square', 'round', 'hexagonic')\n",
@@ -172,20 +207,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_profile_type = ?\n",
-    "shapes_type = ?\n",
-    "age_valid_type = ?"
+    "user_profile_type = dict\n",
+    "shapes_type = tuple\n",
+    "age_valid_type = bool"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(shapes) == shapes_type \\\n",
     "and type(user_profile) == user_profile_type \\\n",
@@ -212,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "tags": [
      "challengify"
@@ -220,7 +266,14 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "def credit_card_industry(string):\n",
+    "    if string[0] == \"1\":\n",
+    "        return 'Airline'\n",
+    "    if string[0] == \"4\":\n",
+    "        return 'Visa'\n",
+    "    if string[0] == \"5\":\n",
+    "        return \"Mastercard\"\n",
+    "    return 'Other'"
    ]
   },
   {
@@ -237,18 +290,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Visa'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "credit_card_industry(\"4539 0132 4843 4768\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Mastercard'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "credit_card_industry(\"5131 9376 6800 4058\")"
    ]
@@ -265,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "tags": [
      "challengify"
@@ -273,7 +348,7 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "genres = ['horror', 'western', 'sci-fi']"
    ]
   },
   {
@@ -285,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "tags": [
      "challengify"
@@ -293,7 +368,7 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "genres.append('mystery')"
    ]
   },
   {
@@ -305,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "tags": [
      "challengify"
@@ -313,7 +388,7 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "genres[1] = 'romance'"
    ]
   },
   {
@@ -332,15 +407,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "tags": [
      "challengify"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 - Horror\n",
+      "2 - Romance\n",
+      "3 - Sci-fi\n",
+      "4 - Mystery\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "for i, x in enumerate(genres):\n",
+    "    print(f'{i+1} - {x.capitalize()}')"
    ]
   },
   {
@@ -355,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "tags": [
      "challengify"
@@ -363,7 +450,7 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "movie = {'year': 1973, 'title': 'Jaws'}"
    ]
   },
   {
@@ -375,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "tags": [
      "challengify"
@@ -383,7 +470,7 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "movie['director'] = 'Steven Spielberg'"
    ]
   },
   {
@@ -395,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "tags": [
      "challengify"
@@ -403,7 +490,7 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "movies = []"
    ]
   },
   {
@@ -415,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "tags": [
      "challengify"
@@ -423,7 +510,33 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "movies.append(movie)\n",
+    "movie_2 = {'year': 2022, 'title': 'She came to me', 'director': 'Rebacca Miller'}\n",
+    "movie_3 = {'year': 1933, 'title': 'Nosferatu', 'director': 'Friedrich Murnau'}\n",
+    "movies.append(movie_2)\n",
+    "movies.append(movie_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'year': 1973, 'title': 'Jaws', 'director': 'Steven Spielberg'},\n",
+       " {'year': 2022, 'title': 'She came to me', 'director': 'Rebacca Miller'},\n",
+       " {'year': 1933, 'title': 'Nosferatu', 'director': 'Friedrich Murnau'}]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies"
    ]
   },
   {
@@ -440,15 +553,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "tags": [
      "challengify"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jaws by Steven Spielberg was released in 1973\n",
+      "She came to me by Rebacca Miller was released in 2022\n",
+      "Nosferatu by Friedrich Murnau was released in 1933\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "for x in movies:\n",
+    "    print(f\"{x['title']} by {x['director']} was released in {x['year']}\")"
    ]
   },
   {
@@ -465,9 +589,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "movie is defined!\n"
+     ]
+    }
+   ],
    "source": [
     "movie = {\n",
     "    'title': { 'en': 'The Dark Knight', 'fr': 'Le Chevalier Noir' },\n",
@@ -498,9 +630,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Le Chevalier Noir'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "movie['title']['fr']"
    ]
@@ -514,11 +657,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The Dark Knight'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "movie['title']['es']"
+    "movie['title']['en']"
    ]
   },
   {
@@ -530,9 +684,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Gary Oldman'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "movie['actors']['support'][2]"
    ]
@@ -548,15 +713,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "tags": [
      "challengify"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Christian Bale',\n",
+       " 'Heath Ledger',\n",
+       " 'Aaron Eckhardt',\n",
+       " 'Morgan Freeman',\n",
+       " 'Gary Oldman',\n",
+       " 'Maggie Gyllenhaal']"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "x = movie['actors']['lead']\n",
+    "for y in movie['actors']['support']:\n",
+    "    x.append(y)\n",
+    "x"
    ]
   },
   {
@@ -568,15 +752,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "tags": [
      "challengify"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1004934033"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "sum(movie['box office USD'].values())"
    ]
   },
   {
@@ -588,9 +783,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'US': 200000000, 'EU': 85000000, 'China': 110000000}\n"
+     ]
+    }
+   ],
    "source": [
     "box_office = {\"US\": 200_000_000, \"EU\": 85_000_000, \"China\": 110_000_000}\n",
     "print(box_office)"
@@ -598,23 +801,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "tags": [
      "challengify"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "395000000"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "sum(box_office.values())"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
